--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,3 +127,9 @@ en:
     bridesmaid_party_member:
       name: 'Bridesmaid Party'
       description: "User is bride or bridesmaid"
+  shipment_states:
+    pending: Your dress is in making
+    ready: Your dress is in quality control
+    shipped: Your dress has been shipped
+    backorder: Your dress is on backorder
+    partial: Your dress is in making
