[chore][shipment states]: update shipment states

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -128,11 +128,11 @@ en:
       name: 'Bridesmaid Party'
       description: "User is bride or bridesmaid"
   shipment_states:
-    pending: Your dress is in making
-    ready: Your dress is in making
+    pending: Your dress is with a seamstress
+    ready: Your dress is with a seamstress
     shipped: Your dress has been shipped
     backorder: Your dress is on backorder
-    partial: Your dress is in making
+    partial: Your dress is with a seamstress
   style:
     glam:
       title: "glam"
