--- a/config/locales/en_US.yml
+++ b/config/locales/en_US.yml
@@ -145,14 +145,14 @@ en-US:
     backorder: backorder
     partial: partial
   order_fabrication_states:
-    processing:                 'Your order is being processed'
-    purchase_order_placed:      'Your order has been received'
-    purchase_order_confirmed:   'Your order has been placed'
+    processing:                 'Your dress is being processed'
+    purchase_order_placed:      'Your dress has been received'
+    purchase_order_confirmed:   'Your dress has been placed'
     fabric_assigned:            'Your fabric is being assigned'
     style_cut:                  'Your dress is in cutting'
     make:                       'Your dress is with a seamstress'
     qc:                         'Your dress is in quality control'
-    shipped:                    'Your order has been shipped'
+    shipped:                    'Your dress has been shipped'
     customer_feedback_required: 'We need some more information'
   payment_states:
     paid: Paid
